# npc_stim

./: .copier-answers.yml  CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/docs/: changelog.md  contributing.md  index.md
src/npc_stim/: __init__.py  running.py  stim.py
tests/: __init__.py
