[project]
name = "npc-stim"
description = "Tools for accessing and processing stim data, compatible with data in the cloud."
authors = [
    { name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitue.org" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "npc-sync>=0.2.2",
    "npc_io>=0.1.26",
    "npc-session>=0.1.33",
    "scipy>=1.12.0",
]
version = "0.1.17"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/AllenInstitute/npc_stim"
Issues = "https://github.com/AllenInstitute/npc_stim/issues"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
npc_stim = [
    "py.typed",
]

[project.scripts]
task = "poethepoet:main"

[dependency-groups]
task_runner = ["poethepoet>=0.33.1"]
linting = ["black>=25.1.0", "isort>=6.0.1", "ruff>=0.11.2"]
testing = ["pytest>=7.4.0", "mypy>=1.4.1", "pytest-cov>=4.1.0"]
bump = [
    "bump-my-version>=1.1.1",
    "git-changelog>=2.5.3",
]
dev_numpy = ["numpy<2.0"]

[tool.uv]
package = true
default-groups = ["task_runner", "linting", "testing", "bump"]

[tool.bumpversion]
tag = true
allow_dirty = true
commit = true
commit_args = "-a"
message = "Bump version: {current_version} → {new_version} [skip actions]"
pre_commit_hooks = [
    "uv lock --upgrade-package npc_stim",
    "git-changelog -o CHANGELOG.md",
    "uv build",
    "uv publish",
]
post_commit_hooks = [
    "git push origin main",
    "git push --tags",
]

[tool.poe.tasks]
mypy = "mypy src --install-types --non-interactive"
pytest = "pytest --cov-report term-missing:skip-covered --cov-report=html"
test = ["pytest"]
ruff = "ruff check src --fix-only"
black = "black src"
format = ["ruff", "black"]
bump_pub_tag = "bump-my-version bump patch"
release = ["format", "bump_pub_tag"]

[tool.black]
target-version = [
    "py39",
    "py310",
    "py311",
]

[tool.ruff]
line-length = 100
select = [
    "B",
    "C4",
    "E",
    "F",
    "PGH",
    "RUF",
    "W",
    "YTT",
    "ANN",
    "C",
    "I",
    "RUF100",
    "N",
    "UP",
]
src = [
    "src",
]
extend-exclude = [
    "tests/fixtures",
]
target-version = "py39"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.mccabe]
max-complexity = 10

[tool.coverage.paths]
source = [
    "src",
]

[tool.coverage.run]
branch = true
source = [
    "src",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
skip_empty = true
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
    "@typing.runtime_checkable",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--ignore-glob=*scripts*,*examples*,*docs*",
    "--cov",
    "--cov-report=html",
    "--cov-config=pyproject.toml",
    "--doctest-glob=*README.md",
    "-x",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
testpaths = [
    "src",
    "tests",
]

[tool.mypy]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_any_unimported = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
implicit_reexport = false
exclude = [
    "src/npc_stim/scripts",
]

[tool.isort]
profile = "black"
atomic = true
skip_glob = [
    "*/setup.py",
]
filter_files = true
known_first_party = [
    "npc_stim",
]
